feat: added tests for subdomains via lib and via smart contracts

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "compile": "SKIP_LOAD=true hardhat compile",
-    "test:ens": "hardhat test ./test/ens.spec.ts"
+    "test:ens": "hardhat test ./test/ens.spec.ts",
+    "test:ens-rinkeby": "hardhat test ./test/ens-rinkeby.spec.ts"
   },
   "keywords": [],
   "author": "Sismo",
