--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "compile": "SKIP_LOAD=true hardhat compile",
-    "test:ens": "hardhat test ./test/ens.tutorial.ts",
-    "test:ens-rinkeby": "hardhat test ./test/ens-rinkeby.spec.ts"
+    "test": "hardhat test ./test/ens-dao.spec.ts"
   },
   "keywords": [],
   "author": "Sismo",
@@ -29,6 +28,7 @@
     "@typescript-eslint/parser": "^4.29.1",
     "chai": "^4.3.4",
     "dns-packet": "^5.3.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.0",
