feat: added compile step

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -17,4 +17,5 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       - run: npm install
+      - run: npm run compile
       - run: npm test
