feat: updated TicketManager, added tests and natspecs

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test:ens-label-booker": "hardhat test ./test/ens-label-booker.spec.ts",
     "test:ens-registry": "hardhat test ./test/ens-registry.spec.ts",
     "test:name-wrapper": "hardhat test ./test/name-wrapper.spec.ts",
-    "test": "npm run test:ens-dao-registry && npm run test:ens-dao-name-wrapper && npm run test:ens-label-booker && npm run test:ens-registry && npm run test:name-wrapper",
+    "test:ticket-manager": "hardhat test ./test/ticket-manager.spec.ts",
+    "test": "npm run test:ens-dao-registry && npm run test:ens-dao-name-wrapper && npm run test:ens-label-booker && npm run test:ens-registry && npm run test:name-wrapper && npm run test:ticket-manager",
     "format": "pretty-quick --pattern 'contracts/**/*.sol' --pattern 'libs/**/*.ts'  --pattern 'test/**/*.ts' --pattern 'tasks/**/*.ts' --pattern 'server/**/*.ts'"
   },
   "keywords": [],
