--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "sismo",
+  "name": "subdomain-dao",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "compile": "SKIP_LOAD=true hardhat compile",
-    "test:ens-dao-erc721-generator": "hardhat test ./test/ens-dao/ens-dao-erc721-generator.spec.ts",
-    "test:ens-dao-erc1155-generator": "hardhat test ./test/ens-dao/ens-dao-erc1155-generator.spec.ts",
-    "test:ens-dao-code-accessible": "hardhat test ./test/ens-dao/ens-dao-code-accessible.spec.ts",
-    "test:ens-dao-claimable": "hardhat test ./test/ens-dao/ens-dao-claimable.spec.ts",
-    "test:ens-dao-registry": "hardhat test ./test/ens-dao/ens-dao-registry.spec.ts",
-    "test:ens-dao-reserved-limited": "hardhat test ./test/ens-dao/ens-dao-reserved-limited.spec.ts",
+    "test:sdao-erc721-generator": "hardhat test ./test/subdomain-dao/sdao-erc721-generator.spec.ts",
+    "test:sdao-erc1155-generator": "hardhat test ./test/subdomain-dao/sdao-erc1155-generator.spec.ts",
+    "test:sdao-code-accessible": "hardhat test ./test/subdomain-dao/sdao-code-accessible.spec.ts",
+    "test:sdao-claimable": "hardhat test ./test/subdomain-dao/sdao-claimable.spec.ts",
+    "test:sdao-registry": "hardhat test ./test/subdomain-dao/sdao-registry.spec.ts",
+    "test:sdao-reserved-limited": "hardhat test ./test/subdomain-dao/sdao-reserved-limited.spec.ts",
     "test:ens-label-booker": "hardhat test ./test/ens-label-booker.spec.ts",
     "test:ens-registry": "hardhat test ./test/ens-registry.spec.ts",
-    "test": "npm run test:ens-dao-erc1155-generator && npm run test:ens-dao-erc721-generator && npm run test:ens-dao-code-accessible && npm run test:ens-dao-claimable && npm run test:ens-dao-registry && npm run test:ens-dao-reserved-limited  && npm run test:ens-label-booker && npm run test:ens-registry",
+    "test": "npm run test:sdao-erc1155-generator && npm run test:sdao-erc721-generator && npm run test:sdao-code-accessible && npm run test:sdao-claimable && npm run test:sdao-registry && npm run test:sdao-reserved-limited  && npm run test:ens-label-booker && npm run test:ens-registry",
     "format": "pretty-quick --pattern 'contracts/**/*.sol' --pattern 'libs/**/*.ts'  --pattern 'test/**/*.ts' --pattern 'tasks/**/*.ts' --pattern 'server/**/*.ts'"
   },
   "keywords": [],
