--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "subdomain-dao",
-  "description": "Subdomain DAO Contract library for Solidity",
-  "version": "0.0.1",
+  "name": "@sismo-core/ens-sdao",
+  "description": "ENS Subdomain DAO (SDAO) Contracts library",
+  "version": "0.0.5",
   "scripts": {
     "compile": "SKIP_LOAD=true hardhat compile",
     "test:sdao-erc721-generator": "hardhat test ./test/subdomain-dao/sdao-erc721-generator.spec.ts",
@@ -26,7 +26,11 @@
     "contracts",
     "ens"
   ],
-  "author": "Sismo Genesis team",
+  "files": [
+    "**/*.sol",
+    "/artifacts/contracts/*.json"
+  ],
+  "author": "Sismo Genesis Team",
   "contributors": [
     "Hadrien Charlanes @dhadrien",
     "Loïc Vincent-Genod @VGLoic"
@@ -35,38 +39,40 @@
   "bugs": {
     "url": "https://github.com/sismo-core/subdomain-dao/issues"
   },
-  "devDependencies": {
+  "dependencies": {
     "@ensdomains/ens": "^0.6.2",
     "@ensdomains/ens-contracts": "^0.0.7",
     "@ensdomains/ensjs": "^2.0.1",
+    "ts-node": "^10.2.1",
+    "typechain": "^5.1.2",
+    "typescript": "^4.3.5",
+    "eth-ens-namehash": "^2.0.8",
+    "ethers": "^5.4.4",
+    "hardhat": "^2.6.0",
+    "hardhat-deploy": "^0.8.11",
+    "hardhat-gas-reporter": "^1.0.4",
+    "solidity-coverage": "^0.7.16",
+    "chai": "^4.3.4",
     "@nomiclabs/hardhat-etherscan": "^2.1.4",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@tenderly/hardhat-tenderly": "^1.0.12",
     "@typechain/ethers-v5": "^7.0.1",
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.21",
-    "@types/mocha": "^9.0.0",
+    "@types/mocha": "^9.0.0"
+  },
+  "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
-    "chai": "^4.3.4",
     "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eth-ens-namehash": "^2.0.8",
-    "ethers": "^5.4.4",
-    "hardhat": "^2.6.0",
-    "hardhat-deploy": "^0.8.11",
-    "hardhat-gas-reporter": "^1.0.4",
     "husky": "^4.3.8",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-alpha.53",
-    "pretty-quick": "^3.1.1",
-    "solidity-coverage": "^0.7.16",
-    "ts-node": "^10.2.1",
-    "typechain": "^5.1.2",
-    "typescript": "^4.3.5"
+    "pretty-quick": "^3.1.1"
   },
   "husky": {
     "hooks": {
