--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sismo-core/subdomain-dao.git"
+    "url": "https://github.com/sismo-core/ens-sdao.git"
   },
   "keywords": [
     "solidity",
@@ -37,7 +37,7 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/sismo-core/subdomain-dao/issues"
+    "url": "https://github.com/sismo-core/ens-sdao/issues"
   },
   "dependencies": {
     "@ensdomains/ens": "^0.6.2",
